--- a/css/callback-bt.css
+++ b/css/callback-bt.css
@@ -10,7 +10,7 @@
     width:68px;
     position: fixed;
     right: 4%;
-    top: 3%;
+    bottom: 4%;
     z-index:999;
     transition:.3s;
     -webkit-animation:hoverWave linear 1s infinite;
