--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-/* Call back button */
-@import './callback-btn.css';
 /* Grid */
 @import './grid.css';
-:root{
-    --logoFont: 'Dancing Script';
-    --mainFont: 'Lato';
-}
 *,
 *::before,
 *::after {
@@ -24,7 +16,7 @@ h6 {
 body{
     padding: 0;
     margin: 0;
-    font-family: var(--mainFont);
+    font-family: 'Lato', sans-serif;
 }
 /* Container */
 .container{
@@ -46,11 +38,11 @@ body{
     margin-bottom: 35px;
 }
 .header-logo{
-    font-family: var(--logoFont);
     font-size: 40px;
     font-weight: 400;
 }
 .header-logo a{
+    font-family: 'Dancing Script', cursive;
     color: black;
 }
 .header-logo a{
