--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,24 @@ body{
     letter-spacing: 0.28px;
     color: black;
 }
+/* Navigation */
+.nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.nav-link{
+    padding: 10px;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: black;
+}
+.nav-link:hover{
+    color: #38a3fd;
+}
 /* Presentation */
 .section-presentation{
     display: flex;
@@ -93,7 +111,7 @@ body{
 /* Products */
 .products-img{
     display: block;
-    border: 1px solid transparent;
+    border: 10px solid transparent;
 }
 .products-img img{
     display: block;
