--- a/src/assets/styles/components/buttons.css
+++ b/src/assets/styles/components/buttons.css
@@ -1,9 +1,24 @@
 /* Buttons */
 
-/* .btn {
+.btn {
+  font-weight: 400;
   text-transform: uppercase;
 }
+.btn,
+.btn-md {
+  font-size: .875rem;
+}
 
+.btn-icon {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  padding-right: 0;
+  padding-left: 0;
+  line-height: 1.6;
+}
+
+/*
 .btn,
 .btn-md {
   border-radius: 30px;
