--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  background-color: #ededed !important;
+  background-color: #f8f8f8 !important;
   font-family: 'Roboto', sans-serif !important;
 }
 
