--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -3,7 +3,7 @@
 .card {
   border: none;
   width: 100%;
-  box-shadow: 0 .125rem .25rem rgba(0,0,0,0.15);
+  box-shadow: 0 .125rem .25rem rgba(black, 0.15);
   position: relative;
 }
   .card-body {
