--- a/src/assets/styles/settings/_bootstrap.variables.scss
+++ b/src/assets/styles/settings/_bootstrap.variables.scss
@@ -335,9 +335,9 @@ $container-padding-x: 1rem !default;
 $border-width:                1px !default;
 $border-color:                $gray-300 !default;
 
-$border-radius:               .25rem !default;
-$border-radius-sm:            .2rem !default;
-$border-radius-lg:            .3rem !default;
+$border-radius:               0 !default; // .25rem !default;
+$border-radius-sm:            0 !default; // .2rem !default;
+$border-radius-lg:            0 !default; // .3rem !default;
 
 $rounded-pill:                50rem !default;
 
@@ -571,7 +571,7 @@ $btn-font-size-lg:            $input-btn-font-size-lg !default;
 
 $btn-border-width:            $input-btn-border-width !default;
 
-$btn-font-weight:             $font-weight-normal !default;
+$btn-font-weight:             700 !default; // $font-weight-normal !default;
 $btn-box-shadow:              inset 0 1px 0 rgba($white, .15), 0 1px 1px rgba($black, .075) !default;
 $btn-focus-width:             $input-btn-focus-width !default;
 $btn-focus-box-shadow:        $input-btn-focus-box-shadow !default;
