--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -1,59 +1,61 @@
 /* Components: card */
 
 .card {
-  border: none;
+  border: 0;
   width: 100%;
-  box-shadow: 0 .125rem .25rem rgba(black, 0.15);
-  position: relative;
 }
-  .card-body {
-    padding: .5rem
+
+// Services
+.card-service {
+  background-color: transparent;
+  text-align: center;
+  .card-icon {
+    display: block;
+    width: 6rem;
+    height: 6rem;
+    background-color: $primary;
+    border-radius: 50%;
+    font-size: 3rem;
+    margin: 0 auto .5rem;
+    line-height: 6rem;
   }
-    .card-labels {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      position: absolute;
-      top: 0; left: 0;
-      margin: .5rem;
+  .card-title {
+
+  }
+  .card-description {
+    color: $gray-600;
+    margin-bottom: 0;
+  }
+}
+
+// Testimonial
+.card-testimonial {
+  box-shadow: 0 0 .75rem 0 rgba(0,0,0,0.15);
+  text-align: center;
+  .card-body {
+    padding: 2rem 2.5rem;
+  }
+    .card-icon {
+      color: $primary;
+      font-size: 2.5rem;
     }
-      .card-labels-item + .card-labels-item {
-        margin-top: .25rem;
-      }
-      .card-labels-item.new,
-      .card-labels-item.off {
-        border-radius: .25rem;
-        color: white;
-        font-size: .875rem;
-        font-weight: 400;
-        padding: .25rem .5rem;
-        text-transform: uppercase;
-      }
-    .card-title {
-      
-    }
-    .card-price,
-    .card-old-price {
-      font-size: 1.25rem;
-      font-weight: 700;
-    }
-    .card-price {
-      color: rgb(96, 96, 96);
-    }
-    .card-old-price {
-      position: relative;
-      color: rgb(175, 175, 175);
-    }
-    .card-old-price::before {
-      content: '';
-      height: 2px;
-      width: 100%;
-      position: absolute;
-      left: 0; top: 50%;
-      background-color: rgb(175, 175, 175);
-      margin-top: -1px;
+    .card-description {
+      color: $gray-600;
+      margin-bottom: 0;
     }
   .card-footer {
     background-color: transparent;
-    padding: .5rem;
+    border-top: 0;
+    padding-bottom: 2rem;
   }
+    .card-avatar {
+      border-radius: 50%;
+      overflow: hidden;
+      width: 64px;
+      height: 64px;
+      margin-bottom: .5rem;
+    }
+    .card-title {
+      font-weight: 700;
+    }
+}
