--- a/src/assets/styles/layouts/_section.scss
+++ b/src/assets/styles/layouts/_section.scss
@@ -1,12 +1,12 @@
 // Layouts: Sections
 
 .section {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 
   position: relative;
 
-  min-height: 10rem;
+  min-height: 12rem;
   &:nth-child(odd) {
     .section-title {
       left: auto; right: 0;
@@ -15,12 +15,16 @@
   &-title {
     position: absolute;
     top: 0; left: 0;
-    color: rgba($primary, .5);
-    font-size: 8rem;
+    color: rgba($primary, .35);
+    font-size: 10rem;
     font-weight: 700;
     margin: 0 1rem;
     text-transform: uppercase;
   }
+}
+
+.section-service {
+  padding-top: 7.5rem;
 }
 
 .section-products {
@@ -28,6 +32,10 @@
   .section-title {
     color: rgba($dark, .5);
   }
+}
+
+.section-testimonial {
+  padding-top: 8.5rem;
 }
 
 .section-contacts {
