--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap');
 
 /* Bootstrap */
 // Configuration
@@ -71,11 +71,12 @@
 
 html {
   font-size: 16px;
+  font-weight: 400;
 }
 
 body {
   background-color: #f8f8f8 !important;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 a {
