--- a/src/assets/styles/layouts/_header.scss
+++ b/src/assets/styles/layouts/_header.scss
@@ -25,7 +25,7 @@
       text-decoration: none;
 
       border: 0.25rem solid $dark;
-      color: var(--bs-dark);
+      color: $dark;
       font-size: 1.5rem;
       font-weight: 700;
 
