--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -7,6 +7,21 @@
     background-color: transparent;
     border-top: 0;
   }
+  img {
+    display: block;
+    max-height: 260px;
+  }
+}
+
+// Categories
+.card-categories{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.card-img-overlay{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 // Services
