--- a/src/assets/styles/layouts/_section.scss
+++ b/src/assets/styles/layouts/_section.scss
@@ -27,11 +27,6 @@
   padding-top: 7.5rem;
 }
 
-
-.section-testimonial {
-  padding-top: 8.5rem;
-}
-
 .section-contacts {
   padding-top: 0;
   padding-bottom: 0;
@@ -63,7 +58,7 @@
     line-height: 28px;
   }
 }
-// SectionProducts
+// SectionCategories
 .section-categories {
   position: relative;
   padding-top: 8.5rem;
