--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -1,93 +1,62 @@
 /* Components: card */
 
 .card {
-  border: 0;
-  width: 100%;
-  &-footer {
-    background-color: transparent;
-    border-top: 0;
-  }
-  img {
-    display: block;
-    max-height: 260px;
-  }
+
 }
 
-// Categories
-.card-categories{
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-.card-img-overlay{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-// Services
-.card-service {
-  background-color: transparent;
-  text-align: center;
-  .card-icon {
-    display: block;
-    width: 6rem;
-    height: 6rem;
-    background-color: $primary;
-    border-radius: 50%;
-    font-size: 3rem;
-    margin: 0 auto .5rem;
-    line-height: 6rem;
+// Category
+.card-category {
+  border: none;
+  min-height: 320px;
+  max-height: 320px;
+  margin-bottom: $grid-gutter-width;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0; right: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 2px 2px rgba(black, 0.25),
+                0 4px 4px rgba(black, 0.25),
+                0 8px 8px rgba(black, 0.25);
+    transition: opacity .35s ease-out;
+    opacity: 0;
   }
-  .card-title {
-
-  }
-  .card-description {
-    color: $gray-600;
-    margin-bottom: 0;
-  }
-}
-
-// Products
-.card-product {
-  box-shadow: $box-shadow-sm;
-  .card-title {
-    font-weight: 700;
-  }
-  .card-price {
-    color: $danger;
-    font-size: 1.5rem;
-    font-weight: 700;
-  }
-}
-
-// Testimonial
-.card-testimonial {
-  box-shadow: $box-shadow-sm; // 0 0 .75rem 0 rgba(0,0,0,0.15);
-  text-align: center;
-  .card-body {
-    padding: 2rem 2.5rem;
-  }
-    .card-icon {
-      color: $primary;
-      font-size: 2.5rem;
+  &:hover {
+    &::before { opacity: 1; }
+    .card-img {
+      transform: scale(1.1);
     }
-    .card-description {
-      color: $gray-600;
-      margin-bottom: 0;
-    }
-  .card-footer {
-    background-color: transparent;
-    border-top: 0;
-    padding-bottom: 2rem;
   }
-    .card-avatar {
-      border-radius: 50%;
+    .card-img-wrapper {
+      position: relative;
+      width: 100%;
+      height: 100%;
       overflow: hidden;
-      width: 64px;
-      height: 64px;
-      margin-bottom: .5rem;
+      z-index: 1;
     }
-    .card-title {
-      font-weight: 700;
+      .card-img {
+        width: initial;
+        max-width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform .35s ease-in-out;
+        vertical-align: middle;
+        transform: scale(1);
+      }
+    .card-img-overlay {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(black, .5);
+      color: white;
+      z-index: 2;
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0; right: 0; bottom: 0; left: 0;
+        border: 1px solid white;
+        margin: 1rem;
+      }
     }
 }
